--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html ng-app="myFirstApp">
-  <head>
+<html >
+
+<head>
     <meta charset="utf-8">
-    <script src="js/angular.js"> </script>
-    <script src="js/app.js"></script> //follow angular.js
+    <script src="angular.min.js">  </script>
+    <script src="app.js"></script>
     <title>Hello AngularJS</title>
-  </head>
-  <body>
+</head>
+
+<body ng-app="myFirstApp">
     <div ng-controller="MyFirstController">
-{{name}}
-      {{sayHello()}}
-      <input type="text" ng-model="name">
+        {{name}} {{sayHello()}}
+        <input type="text" ng-model="name">
     </div>
     <h1> Hello AngularJS </h1>
     <p> thrilled about this tech</p>
-  </body>
+</body>
+
 </html>
