--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html >
-
-<head>
+<html ng-app="myFirstApp">
+<head >
     <meta charset="utf-8">
-    <script src="angular.min.js">  </script>
+    <script src="angular.min.js"></script>
     <script src="app.js"></script>
     <title>Hello AngularJS</title>
 </head>
 
-<body ng-app="myFirstApp">
+<body >
+  <h1> Hello AngularJS </h1>
+  <p> thrilled about this tech</p>
     <div ng-controller="MyFirstController">
         {{name}} {{sayHello()}}
         <input type="text" ng-model="name">
+        Inside my input is: {{name}}
     </div>
-    <h1> Hello AngularJS </h1>
-    <p> thrilled about this tech</p>
 </body>
-
 </html>
